# hurd_oss

./: .gitignore  INSTALL  README  configure.ac  make_clean.sh  make_configure.sh
src/: Makefile.am  oss.c
